# exopticon

./: .credo.exs  .dockerignore  .env  .formatter.exs  .gitignore  .gitlab-ci.yml  .gitmodules  .stignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.runtime  Makefile  Makefile.toml  README.md  README.org  build.rs  mix.exs  release_info  testdata.dvc
.dvc/: config
exopticon/: Cargo.toml  Makefile.toml  build.rs  diesel.toml
exopticon/migrations/2018-10-22-125302_initial_schema/: down.sql
exopticon/migrations/2019-06-28-192842_create_observations/: down.sql
exopticon/migrations/2020-04-28-004213_create_analysis_engines/: down.sql  up.sql
exopticon/migrations/2020-05-20-115705_microsecond_offsets/: down.sql  up.sql
exopticon/migrations/2020-08-26-233213_create_alert_rules/: down.sql  up.sql
exopticon/migrations/2020-09-02-235857_alert_rule_camera_id/: down.sql  up.sql
exopticon/migrations/2020-09-04-190239_alert_rules_add_topic_column/: down.sql  up.sql
exopticon/migrations/2020-09-16-233348_create_notification_group/: down.sql  up.sql
exopticon/migrations/2020-12-04-182117_video_unit_to_uuid/: down.sql  up.sql
exopticon/migrations/2021-03-05-130021_add_obj_detection_instances/: down.sql  up.sql
exopticon/migrations/2021-05-03-204152_create_events/: down.sql  up.sql
exopticon/migrations/2021-06-02-075020_video_unit_indexes/: down.sql  up.sql
exopticon/migrations/2021-07-24-235645_add-event-instance/: down.sql  up.sql
exopticon/migrations/2022-03-22-155034_create_user_sessions/: down.sql  up.sql
exopticon/migrations/2022-05-17-194730_create_storage_groups/: down.sql  up.sql
exopticon/migrations/2022-05-20-202611_create_camera_groups/: down.sql  up.sql
exopticon/migrations/2022-11-04-124712_add_camera_group_name_max_length/: down.sql  up.sql
exopticon/migrations/2024-05-14-194527_ptz_step/: down.sql  up.sql
exopticon/migrations/2024-10-07-091952_to_sqlite/: down.sql  up.sql
exopticon/migrations/2024-10-17-185220_reset/: down.sql  up.sql
exopticon/migrations/2024-11-14-163941_create_all_camera_group/: down.sql  up.sql
exopticon/migrations/2025-07-08-153704_sqlite/: up.sql
exopticon/src/: alert_actor.rs  alert_rule_handler.rs  alert_rule_routes.rs  alert_supervisor.rs  analysis_actor.rs  analysis_handler.rs  analysis_routes.rs  analysis_supervisor.rs  api.rs  app.rs  auth_handler.rs  auth_routes.rs  business.rs  camera_group_handler.rs  camera_group_routes.rs  camera_handler.rs  camera_routes.rs  capture_actor.rs  capture_supervisor.rs  config.rs  db.rs  db_registry.rs  deletion_supervisor.rs  errors.rs  fair_queue.rs  file_deletion_actor.rs  file_deletion_supervisor.rs  file_handler.rs  main.rs  models.rs  mqtt_actor.rs  notifier_handler.rs  notifier_supervisor.rs  observation_handler.rs  observation_routes.rs  playback_actor.rs  playback_supervisor.rs  proc_test.rs  prom_registry.rs  register_handler.rs  (+25 more)
exopticon/src/api/: auth.rs  basic_auth_middleware.rs  camera_groups.rs  cameras.rs  metrics.rs  static_files.rs  storage_groups.rs  video_units.rs  webrtc.rs
exopticon/src/business/: camera_groups.rs
exopticon/src/cworkers/: Makefile  captureworker.c  mpack_frame.h  playbackworker.c
exopticon/src/db/: auth.rs  camera_groups.rs  cameras.rs  storage_groups.rs  uuid.rs  video_units.rs
exopticon/templates/: login.html
exopticon/web/: angular.json  package-lock.json  package.json  tslint.json
exopticon/web/src/: index.html  main.ts  manifest.webmanifest  styles.css  test.ts
exopticon/web/src/app/: alert.service.spec.ts  alert.service.ts  app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.interceptor.spec.ts  auth.interceptor.ts  auth.service.spec.ts  auth.service.ts  camera-group.service.spec.ts  camera-group.service.ts  camera-group.spec.ts  camera-group.ts  camera-panel.service.spec.ts  camera-panel.service.ts  camera.service.ts  camera.ts  element-visible.service.spec.ts  element-visible.service.ts  event.service.spec.ts  event.service.ts  frame-message.ts  observation.service.spec.ts  observation.service.ts  observation.ts  token.service.ts  token.ts  user.service.spec.ts  user.service.ts  uuid.ts  video-clip.service.spec.ts  video-clip.service.ts  video-unit-library.ts  video-unit.service.spec.ts  video-unit.service.ts  video-unit.ts  video.service.spec.ts  (+3 more)
exopticon/web/src/app/alert-view/: alert-view.component.css  alert-view.component.html  alert-view.component.spec.ts  alert-view.component.ts
exopticon/web/src/app/analysis-panel/: analysis-panel.component.css  analysis-panel.component.html  analysis-panel.component.spec.ts  analysis-panel.component.ts
exopticon/web/src/app/camera-detail/: camera-detail.component.css  camera-detail.component.html  camera-detail.component.spec.ts  camera-detail.component.ts
exopticon/web/src/app/camera-group-detail/: camera-group-detail.component.css  camera-group-detail.component.html  (+2 more)
exopticon/workers/: exopticon_worker.py  object_detection_worker.py  tensorflow_object_detection.py  yolov3_worker.py
exserial/: Cargo.toml  Makefile.toml
exserial/benches/: my_benchmark.rs
exserial/src/: exlog.rs  lib.rs  log.rs  models.rs
exsnap/: Cargo.toml
exsnap/src/: error.rs  main.rs
onvif/: Cargo.toml  README.md
onvif/src/: camera.rs  discovery.rs  error.rs  lib.rs  util.rs
workers/: Cargo.toml  Makefile.toml  build.rs  exopticon.py  exopticon_tests.py  exopticon_worker.py  motion_detection.py  object_detection_worker.py  tensorflow_object_detection.py  yolov3_worker.py
workers/benches/: captureworker_benchmark.rs
workers/coral/: coral.py
workers/coral/data/: .gitignore  ssd_mobilenet_v2_coco_quant_postprocess_edgetpu.tflite.dvc
workers/cworkers/: Makefile  captureworker.c  exlog.h  exvid.c  exvid.h  mpack_frame.c  mpack_frame.h  playbackworker.c  timing.h
workers/frigate/: build.bash  event.py  motion.py
workers/src/: main.rs
workers/yolov4/: .gitignore  build.bash  darknet.py
workers/yolov4/data/: .gitignore  coco.data  yolov4-tiny.weights.dvc  yolov4.weights.dvc
(+388 files in other folders)
