[package]
name = "exopticon"
version = "0.1.0"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
edition = "2018"

[workspace]

[profile.dev]
opt-level = 2
debug = true

[dependencies]
onvif = { path = "onvif" }
actix = "0.7.4"
actix-web = "0.7.8"
askama = "0.7"
bcrypt = "0.2.0"
bytes = "0.4.10"
chrono = { version = "0.4.6", features = ["serde"] }
chrono-tz = "0.5"
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.13.0"
env_logger = "0.5.13"
log = "0.4"
mime_guess = "2.0.0-alpha.6"
failure = "0.1.2"

rmp = "^0.8"
rmp-serde = "0.13.7"
futures = "0.1"
r2d2 = "0.8.2"
rust-embed="4.1.0"
tokio = "0.1.11"
tokio-codec = "0.1.1"
tokio-io = "0.1.10"
tokio-process = "0.2"
serde_bytes = "0.10.4"
serde_derive="1.0.79"
serde_json="1.0"
serde = "1.0.80"
uuid = { version = "0.6.5", features = ["serde", "v4"] }

[build-dependencies]
askama = "0.7"