
[package]
name = "exopticon"
description = "A video surveillance system."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
license = "AGPL-3.0"
keywords = ["camera", "cctv", "onvif", "surveillance"]
categories = ["web-programming"]
edition = "2018"

[workspace]

[profile.dev]
opt-level = 2
debug = true

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[dependencies]
onvif = { path = "onvif" }
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
base64 = "0.10.1"
base64-serde = "0.3"
bcrypt = "0.2"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
dialoguer = "0.3"
diesel = { version = "1.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.13"
env_logger = "0.5"
lazy_static = "1.3.0"
log = "0.4"
mime_guess = "2.0.0-alpha.6"
failure = "0.1"
rand = "^0.6"
rmp = "^0.8"
rmp-serde = "0.13"
futures = "0.1"
r2d2 = "0.8"
rust-embed="4.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
serde_bytes = "0.10"
serde_derive="1.0"
serde_json="1.0"
serde = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

[build-dependencies]
askama = "0.7"