[package]
name = "exopticon"
description = "A video surveillance system."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["camera", "cctv", "onvif", "surveillance"]
categories = ["web-programming"]
edition = "2021"
default-run = "exopticon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { path = "../onvif" }
exserial = { path = "../exserial" }
actix = "0.12"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.4"
actix-interop = "0.3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
actix-web-actors = "4.1"
actix-web-prom = "0.6.0"
actix-ws = "0.2.5"
anyhow = "1.0"
base64 = "0.10.1"
base64-serde = "0.3"
bcrypt = "0.11"
bincode = "1.3.3"
bytes = "1"
conv = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
dialoguer = "0.3"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.13"
env_logger = "0.8.4"
futures-util = "0.3.25"
handlebars = "3.5.2"
lazy_static = "1.3.0"
log = "0.4.14"
mock_instant = "0.2"
mime_guess = "2.0.0-alpha.6"
mqtt-async-client = "0.3.1"
failure = "0.1"
qstring = "0.7.2"
prometheus = "0.13"
rand = "^0.6"
rmp = "^0.8"
rmp-serde = "0.13"
futures = "0.3"
r2d2 = "0.8"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
tempfile = "3.1.0"
time = { version = "0.2.23", default-features = false, features = ["std"] }
tokio = { version = "^1.13.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde_bytes = "0.10"
serde_derive="1.0"
serde_repr = "0.1"
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
url = "^2.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
webrtc = "0.6.0"

[build-dependencies]
askama = "0.7"
