[package]
name = "exserial"
description = "A serialization helper library for Exopticon."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["serialization"]
categories = ["web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exserial"
crate-type = ["lib", "staticlib"]

[dependencies]
criterion = "0.3"
serde_bytes = "0.10"
serde_derive="1.0"
bincode = "1.3.3"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
