[package]
name = "exsnap"
version = "0.1.0"
authors = ["David Mattli <dmm@mattli.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
byte-slice-cast = "0.3"
gstreamer = "0.16.2"
gstreamer-audio = "0.16.2"
gstreamer-app = "0.16.0"
gstreamer-pbutils = "0.16.0"
gstreamer-video = "0.16.0"
glib = "0.10.1"
derive_more = "0.99.9"
env_logger = "0.7"
log = "0.4"
thiserror = "1.0.20"
image = "0.23.9"
