[package]
name = "onvif"
version = "0.1.0"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
description = "A binding for the ONVIF protocol used to control ip cameras."
repository = "https://gitlab.com/dmattli/exopticon"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["camera", "cctv", "onvif"]
categories = ["api-wrapper", "network-programming"]
edition = "2018"

[dependencies]
base64 = "0.9"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
hyper = "0.13"
futures = "0.3.1"
futures-util = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
rand = "0.6"
rust-crypto = "^0.2"
serde = { version = "1.0.80", features = ["derive"] }
serde_json="1.0"
sxd-document = "0.3"
sxd-xpath = "0.4"
uuid = { version = "0.7.1", features = ["v4"] }