[package]
name = "onvif"
version = "0.1.0"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
description = "A binding for the ONVIF protocol used to control ip cameras."
repository = "https://gitlab.com/dmattli/exopticon"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["camera", "cctv", "onvif"]
categories = ["api-wrapper", "network-programming"]
edition = "2024"

[dependencies]
base64 = "0.9"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
hyper = { version = "0.14.30", features = ["client", "http1", "tcp", "stream"]}
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "^1.40.0", features = ["full"] }
tokio-stream = "^0.1.16"
rand = "0.6"
rust-crypto = "^0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json="1.0"
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "1.0.64"
uuid = { version = "0.7.4", features = ["v4"] }
