[package]
name = "workers"
description = "Analysis workers for Exopticon."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
edition = "2018"
license = "AGPL-3.0"
keywords = ["camera", "cctv", "onvif", "surveillance"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
