[package]
name = "workers"
description = "Analysis workers for Exopticon."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
edition = "2018"
license = "GPL-3.0-or-later"
keywords = ["camera", "cctv", "onvif", "surveillance"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exserial = { path = "../exserial" }

[dev-dependencies]
criterion = "0.3"
tempfile = "3.1.0"

[build-dependencies]
exserial = { path = "../exserial" }

[[bench]]
name = "captureworker_benchmark"
harness = false
