[package]
name = "workers"
description = "Analysis workers for Exopticon."
version = "0.1.0"
repository = "https://gitlab.com/dmattli/exopticon"
authors = ["David Matthew Mattli <dmm@mattli.us>"]
readme = "README.md"
edition = "2024"
license = "GPL-3.0-or-later"
keywords = ["camera", "cctv", "onvif", "surveillance"]
categories = ["web-programming"]

[[bin]]
name = "capture_worker"
test = false
bench = false


[dependencies]
chrono = "0.4.41"
exserial = { path = "../exserial" }
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-video = "0.23.5"
log = "0.4.27"
uuid = { version = "^1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
criterion = "0.3"
tempfile = "3.13.0"

[build-dependencies]
exserial = { path = "../exserial" }

[[bench]]
name = "captureworker_benchmark"
harness = false
